# my_python_scripts

./: .gitignore  README.md  generate_password.py  pomodoro_timer.py  send_email.py
Python_ETL/: simple_ETL.ipynb
Python_ETL/.ipynb_checkpoints/: pandas_pipe-checkpoint.ipynb  simple_ETL-checkpoint.ipynb
Selenium/: .gitignore  messenger_spammer.py  twitter_autologin.py
amazon/amazon/: items.py  settings.py
amazon/amazon/spiders/: amazonspider.py
api_wrappers_samples/: requirements.txt
api_wrappers_samples/reddit/: explore.ipynb  funcs_classes.py  operations.py
api_wrappers_samples/reddit/.ipynb_checkpoints/: .env-checkpoint  explore-checkpoint.ipynb
api_wrappers_samples/reddit/data/: new_submissions_09062020.csv
api_wrappers_samples/tweepy_examples/: get_tweets.py  stream_tweets.py
kafka_sample_docker/: docker-compose.yaml  kafka-consume.py  kafka-produce.py
pickling/: create_pickle.py  dataframe.pkl  dictionary.pkl  open_pickle.py  pickle_daraframe.ipynb
random_id_email_password/: names.json  random_credentials.py
spitjay_package/: README.md  setup.cfg  setup.py
spitjay_package/src/spitjay/: __init__.py  core.py
tests_with_docker/dump_csv/: sent_dump.csv  word_dump.csv
tests_with_docker/mongo_load/: load.py
tests_with_docker/pg_load/: load.py
tests_with_docker/redis_load/: load.py
wc_praw/: requirements.txt
wc_praw/reddit/: explore.ipynb  reddit.py  subreddits.csv  todo.yaml  top100subreddits.csv
wc_praw/shrek/data/: README.md  (+1 more)
wc_praw/youtube/: comments.py  youtube.py
yt_download/: README.md  requirements.txt  ytdownload.py
(+11 files in other folders)
