[metadata]
name = spitjay
version = 0.7.1
description = test package
long_description = file: README.md
author = Masa Fukui
author_email = masahiro.m.fukui@gmail.com
keywords = test, package, demo
classifiers = 
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License

[options]
package_dir =
    =src
packages = find:

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    sj = spitjay.core:spit_1000_json